Separated oauth to new function

--- a/public/index.html
+++ b/public/index.html
@@ -32,13 +32,13 @@
 
             <ul class="nav navbar-nav">
               <li class="active">
-                <a href="#/">Feeds</a>
+                <a href="/">Feeds</a>
               </li>
               <li>
-                <a ng-href="#/filtered">Filtered Tweets</a>
+                <a ng-href="/filtered">Filtered Tweets</a>
               </li>
               <li>
-                <a ng-href="#/mentions">Mentioned Tweets</a>
+                <a ng-href="/mentions">Mentioned Tweets</a>
               </li>
             </ul>
           </div>
